<resources>
    <string name="app_name">TC</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="site">站点</string>
    <string name="topic">主题</string>
    <string name="weekly">周刊</string>
    <string name="mine">我的</string>
    <string name="night_mode">夜间模式</string>
    <string name="offline_download">下载</string>
    <string name="register_login">注册/登录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings">相关设置</string>
    <string name="only_chinese">仅中文</string>
    <string name="only_english">仅英文</string>
    <string name="mix_chinese_english">中英混合</string>
    <string name="recommond_settings">推荐设置</string>
    <string name="custom_channel">定制频道</string>
    <string name="week_miss">一周拾遗</string>
</resources>
