<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/ic_menu_site"
            android:title="@string/site"/>
        <item
            android:id="@+id/nav_topic"
            android:icon="@drawable/ic_menu_topic"
            android:title="@string/topic"/>
        <item
            android:id="@+id/nav_weekly"
            android:icon="@drawable/ic_menu_weekly"
            android:title="@string/weekly"/>
        <item
            android:id="@+id/nav_mine"
            android:icon="@drawable/ic_menu_mine"
            android:title="@string/mine"/>
    </group>

    <group android:id="@+id/group_func">
        <item
            android:id="@+id/nav_mode"
            android:title="@string/night_mode"/>
        <item
            android:id="@+id/nav_offline_download"
            android:title="@string/offline_download"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>
    </group>

</menu>
