<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chinese"
        android:orderInCategory="1"
        android:title="@string/only_chinese"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_english"
        android:orderInCategory="2"
        android:title="@string/only_english"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_mixture"
        android:orderInCategory="3"
        android:title="@string/mix_chinese_english"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_recommend_settings"
        android:orderInCategory="4"
        android:title="@string/recommond_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_custom_channel"
        android:orderInCategory="5"
        android:title="@string/custom_channel"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_week_miss"
        android:orderInCategory="6"
        android:title="@string/week_miss"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="7"
        android:title=""
        android:icon="@mipmap/white_search"
        app:showAsAction="ifRoom"/>
</menu>
